Fix styling on smaller screens

--- a/karaokebunny.css
+++ b/karaokebunny.css
@@ -128,13 +128,38 @@ video {
 .karaokebunny-sidebar {
     color: var(--main-color);
     padding-top: 20px;
-    width: 25vw;
-    max-width: 600px;
+    padding-left: 10px;
+    width: 30vw;
+    max-width: 700px;
     height: calc(100vh - 216px);
     position: absolute;
     right: 0px;
     top: 84px;
     z-index: 1;
+}
+
+@media (min-width: 2560px) {
+    .karaokebunny-sidebar {
+        font-size: 36pt;
+    }
+}
+
+@media (min-width: 1920px) and (max-width: 2560px) {
+    .karaokebunny-sidebar {
+        font-size: 32pt;
+    }
+}
+
+@media (min-width: 1024px) and (max-width: 1920px) {
+    .karaokebunny-sidebar {
+        font-size: 28pt;
+    }
+}
+
+@media (max-width: 1024px) {
+    .karaokebunny-sidebar {
+        font-size: 24pt;
+    }
 }
 
 /* QR Code */
@@ -149,7 +174,6 @@ span#karaokebunny-qrcode img {
 
 /* Song Queue */
 .karaokebunny-queue-inner {
-    font-size: 20pt;
     overflow-x: hidden;
     overflow-y: scroll;
     scrollbar-color: var(--main-color) #1f1f1f;
@@ -158,7 +182,6 @@ span#karaokebunny-qrcode img {
 }
 
 .karaokebunny-queue-title {
-    font-size: 28pt;
     padding-right: 20px;
     border-bottom: 2px solid var(--main-color);
 }
@@ -177,19 +200,34 @@ span#karaokebunny-qrcode img {
     text-decoration: none;
 }
 
-.karaokebunny-title {
-    font-size: 28pt;
-}
-
 .karaokebunny-artist {
+    font-size: 70%;
     width: 80%;
 }
 
-.karaokebunny-duration {
+.karaokebunny-total-duration {
     float: right;
+    position: relative;
+    top: 0px;
+    right: 0px;
     text-align: right;
+    /*
     width: 10%;
     padding-right: 15px;
+    */
+}
+
+.karaokebunny-duration {
+    font-size: 70%;
+    float: right;
+    position: relative;
+    top: 0px;
+    right: 10px;
+    text-align: right;
+    /*
+    width: 10%;
+    padding-right: 15px;
+    */
 }
 
 /* Footer */
